uncommented out the star-banner and hopefully fixed bullet point issues, add line height to try and make letter spacing look better on the footer content

--- a/css/_iron_overrides.css
+++ b/css/_iron_overrides.css
@@ -277,7 +277,7 @@ table.bulletpoints__housetype tr td span:before, table.bulletpoints__directions 
 
   .bulletpoints__directions{
     float:left;
-    width: 100%;
+    width: 95%;
     border-collapse:separate;
   }
 
