--- a/css/_style.css
+++ b/css/_style.css
@@ -465,8 +465,8 @@ p{
     font-size: 9px;
     font-weight: normal;
     margin: 5px 5px 8px;
-    line-height: 10px;
-    letter-spacing: 1px;
+    line-height: 12px;
+    letter-spacing: 30px;
 }
 
 .page_no{
